Refactor: Improve image loading performance and add support for WebP format

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         </header>
         <div class="content">
           <div class="user-image">
-            <img src="./images/image-victor.jpg" alt="" />
+            <picture>        
+              <source srcset="./images/image-victor.webp">
+              <img src="./images/image-victor.jpg" alt="user image">
+            </picture>
           </div>
           <div class="user-info">          
             <h1>Victor Crest <span>26</span></h1>
