Refactor: Update image paths for improved performance and support for WebP format

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <main>
       <div class="card">
         <header>
-          <img src="./images/bg-pattern-card.svg" alt="" />
+          <img src="./assets/images/bg-pattern-card.svg" alt="" />
         </header>
         <div class="content">
           <div class="user-image">
             <picture>        
-              <source srcset="./images/image-victor.webp">
-              <img src="./images/image-victor.jpg" alt="user image">
+              <source srcset="./assets/images/image-victor.webp">
+              <img src="./assets/images/image-victor.jpg" alt="user image">
             </picture>
           </div>
           <div class="user-info">          
